@@ -5,6 +5,10 @@
 
 2012-06-29  Ethan A Merritt  <merritt@u.washington.edu>
 
+	* src/plot2d.c (eval_plots):  Zero is often a special point in a
+	function domain.  Make sure we don't miss it due to round-off error. 
+	Bug #3519079
+
 	* term/canvas.trm: ctx.fillText() uses fillStyle rather than strokeStyle
 
 	* src/graphics.h src/graph3d.h src/graphics.c src/plot2d.c:
